cmake_minimum_required(VERSION 3.1)
project(Maze)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
file(GLOB_RECURSE CXX_CPP ${CMAKE_SOURCE_DIR}/lib/*.cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
link_directories(${CMAKE_SOURCE_DIR}/easyx/lib64)
link_directories(${CMAKE_SOURCE_DIR}/easyx/lib32)
add_executable(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/main.cpp ${CXX_CPP} ${CXX_LIB})
target_link_libraries(Maze PRIVATE easyx gdi32 comdlg32 uuid ole32 oleaut32 imm32 winmm z)
